# CommCanary

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ENGINEERING_PLAN.md  LICENSE  MANIFEST.in  README.md  RESEARCH_SPEC.md  SECURITY.md  pyproject.toml  repomix-output.xml
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  dependency-review.yml  pages.yml  publish.yml
benchmarks/: __init__.py  __main__.py  fixtures.py  runner.py
benchmarks/baselines/: local-arm64-macos-cpython310-20260711.json
docs/: api.md  architecture.md  artifact-evaluation.md  benchmarks.md  cli.md  integrity.md  platform-support.md  privacy.md  release.md  resource-limits.md
docs/adr/: 0001-assurance-terminology.md  0002-shared-resource-policy.md  0003-hash-taxonomy.md  0004-api-stability.md  0005-dependency-policy.md  0006-experiment-boundary.md  0007-platform-support.md  0008-paper-publication-boundary.md  README.md
docs/demo/: index.html
docs/formats/: compatibility.md  decisions.md  public-api.md
examples/: instrumented_decode.py  make_synthetic_trace.py  research_scaffolding.py
examples/traces/: llama70b_tp8_trace.json  llama70b_tp8_trace_long.json
experiments/: __init__.py
experiments/rostam/: .gitignore  DESIGN.md  __init__.py  analyze.py  capture_shared_trace.sbatch  configs.json  microbench_tp8.py  overlap_replay.py  run_canary.sbatch  run_full.sbatch  run_matrix.sh  run_micro.sbatch  run_shared.sbatch  run_shared_matrix.sh  setup.sh  workload_tp8.py
experiments/rostam/analysis/: __init__.py  archive.py  claims.py  legacy.py  pipeline.py  schemas.py
experiments/rostam/constraints/: direct-common.txt  direct-nccl-2.19.3.txt  direct-nccl-2.20.5.txt  environment-contract.json
experiments/rostam/harness/: __init__.py  attempts.py  canonical.py  completeness.py  manifest.py  model.py  runner.py  selection.py
experiments/rostam/lib/: __init__.py  campaign.py  catalog.py  cell_entrypoint.py  common.sh  environment_contract.py  lock_evidence.py  (+2 more)
paper/: README.md  draft.md
schemas/: commcanary.fidelity_verification.v1.schema.json
src/commcanary/: __init__.py  baselines.py  behavior_config.py  capture.py  cli.py  compare.py  compiler.py  errors.py  formats.py  html_report.py  interop.py  operation_identity.py  py.typed  reduce.py  replay.py  resources.py  schema.py  statistics.py  version.py
tests/: __init__.py  artifact_helpers.py  builders.py  test_behavior_config.py  test_capture_security.py  test_cli_contract.py  test_cli_decomposition.py  test_commcanary.py  test_coverage_policy.py  test_formats.py  test_foundation_contracts.py  test_html_contract.py  test_import_boundaries.py  test_integrity_ownership.py  test_phase4_semantics.py  test_phase5_boundaries.py  test_phase5_edge_facades.py  test_release_metadata.py  test_resource_boundary_propagation.py  test_resource_limits.py  test_verify_tool.py
tests/adapters/: __init__.py  test_capture.py  test_capture_merge_shard_reconciliation.py  test_capture_process_lifecycle.py  test_capture_record_validation.py  test_import_kineto_input_budget.py  test_interop.py
tests/benchmarks/: test_adapter_optimizations.py  test_fixtures.py  test_runner.py
tests/comparison/: __init__.py  test_policy.py
tests/compilation/: __init__.py  test_absolute_start_gap_reconciliation.py  test_canary_hash_field_projection.py  test_canary_hash_field_stripping.py  test_canary_hash_timing_expansion.py  test_compiler.py
tests/contracts/: test_artifact_facade.py  test_cli_characterization.py  test_comparison_boundaries.py  test_golden_hashes.py  test_json_schemas.py  test_public_imports.py  test_runtime_artifacts.py  test_semantic_characterization.py  test_wire_policy.py
tests/replay/: __init__.py  test_model.py  test_replay_clock_budget_exceeded.py  test_replay_operation_ordering_ablation.py  test_replay_parameter_validation.py  test_timing_sample_minimal_encoding_equivalence.py
tests/verification/: __init__.py  test_assurance.py  test_fidelity_source_commitment_mismatches.py
tools/: __init__.py  coverage_policy.json  coverage_policy.py  import_boundaries.py  release_metadata.py  verify.py
(+103 files in other folders)
