[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "commcanary"
version = "0.3.0"
description = "Decision-preserving communication canaries for distributed LLM inference regressions."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Anshuman Agrawal" }
]
license = { text = "MIT" }
keywords = [
  "nccl",
  "collective-communication",
  "performance-regression",
  "trace-compression",
  "gpu",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Benchmark",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/iemAnshuman/commcanary"
Repository = "https://github.com/iemAnshuman/commcanary"
Changelog = "https://github.com/iemAnshuman/commcanary/blob/main/CHANGELOG.md"

[project.scripts]
commcanary = "commcanary.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
