[build-system]
requires = ["setuptools>=65,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "commcanary"
version = "0.3.0"
description = "Decision-preserving communication canaries for distributed LLM inference regressions."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Anshuman Agrawal" }
]
license = { text = "MIT" }
keywords = [
  "nccl",
  "collective-communication",
  "performance-regression",
  "trace-compression",
  "gpu",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Benchmark",
]
dependencies = []

[project.optional-dependencies]
test = [
  "coverage[toml]>=7.6,<8",
  "pytest>=8,<9",
]
experiment = [
  "pytest>=8,<9",
]
dev = [
  "actionlint-py>=1.7,<2",
  "build>=1.2,<2",
  "coverage[toml]>=7.6,<8",
  "jsonschema>=4.23,<5",
  "mypy>=1.18,<2",
  "pytest>=8,<9",
  "ruff>=0.14,<0.15",
  "setuptools>=65,<81",
  "shellcheck-py>=0.10,<1",
  "twine>=5,<7",
]

[project.urls]
Homepage = "https://github.com/iemAnshuman/commcanary"
Repository = "https://github.com/iemAnshuman/commcanary"
Changelog = "https://github.com/iemAnshuman/commcanary/blob/main/CHANGELOG.md"

[project.scripts]
commcanary = "commcanary.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
commcanary = ["py.typed", "schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["commcanary"]

[tool.coverage.report]
show_missing = true
skip_covered = true
# tools/coverage_policy.py separately enforces exact statement and branch floors.
fail_under = 0

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.9"
strict = true
warn_unreachable = true
pretty = true
show_error_codes = true
